Update 'zohnx9k3o-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:ae3f20c309e1c4cc8d9a0cb88220c4e867a51773@sha256:2fa1d241cdda620d9a065c4c0cf289731dd25e9f8f296608b551e4312aeb3519

--- a/components/zohnx9k3o-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/zohnx9k3o-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zohnx9k3o-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:ae3f20c309e1c4cc8d9a0cb88220c4e867a51773@sha256:2fa1d241cdda620d9a065c4c0cf289731dd25e9f8f296608b551e4312aeb3519
+          name: container-image
